examples/test/testpolicy10953.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10953
  namespace: namespace28
spec:
  podSelector:
    matchLabels:
      key24: value25
      key44: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value38
      podSelector:
        matchLabels:
          key5: value13
          key43: value24
          key28: value36
